IDEAS CPLEX Module v0.8, 26/01/2016
-----------------------
- Updated AML dependency (0.9.4)

IDEAS CPLEX Module v0.7, 20/11/2015
-----------------------
- Migrated CPLEX module from Clinker to GitHub. Updated to new IDEAS architecture.