@@ -1,7 +1,7 @@
 {
     "defaultInputFormat": "OPL",
     "CSPReasoner": "CSPWebReasoner",
-    "CSPWebReasonerEndpoint": "http://services.governify.io:8080/CSPWebReasoner",
+    "CSPWebReasonerEndpoint": "http://services.governify.io:8080/CSPWebReasoner/api/v1",
     "DLReasoner": "NONE",
     "ANDConstraintsBreaking" : "true",
     "AgreementGenerator" : "BASIC"
