@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>es.us.isa.ideas.module</groupId>
-	<artifactId>ideas-cplex-module</artifactId>
-	<version>0.8</version>
-	<packaging>pom</packaging>
-	<modules>
-		<module>languages/ideas-opl-language</module>
-	</modules>
-    <name>ideas-cplex-module</name>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>es.us.isa.ideas.module</groupId>
+    <artifactId>ideas-module-opl</artifactId>
+    <version>0.8.1</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>languages/ideas-language-opl</module>
+    </modules>
+    <name>ideas-module-opl</name>
 </project>
